--- a/andre-bpwl.html
+++ b/andre-bpwl.html
@@ -3,7 +3,7 @@
 	<title> tugas github bpwl </title>
 </head>
 <body>
-	<h1> andre prisya lubis </h1>
+	<h1> Aqsal Rheznandya </h1>
 	<h1> 1 TI D </h1>
 </body>
 </html>
